2007-09-04  Naba Kumar  <naba@gnome.org>

	(Backported from HEAD)

	* plugins/class-gen/plugin.c: Do not enable 'Add to project'
	projects that can not add sources.

	* plugins/file-wizard/file.c: Similarly for file wizard,
	Do not enable 'Add to project' projects that can not add sources.

2007-09-04  Naba Kumar  <naba@gnome.org>

	(Backported from HEAD)

	* configure.in: Bumped gnome-build requirement to 0.2.0
	for project capabilities support.
	
	* plugins/project-manager/plugin.c: Enable/disable project
	actions based on project capabilities. Fixes bug #433552:
	crash in Anjuta IDE: add file test.h in project on generic
	Makefile.

	* libanjuta/interfaces/libanjuta.idl: Added method to query
	project capabilities.

2007-09-04  Johannes Schmid <jhs@gnome.org>

	* plugins/project-wizard/templates/anjuta-plugin/src/Makefile.am.tpl:
	Fixed anjuta-plugin template plugin by moving the "\" out
	of the [IF] block

2007-08-31  Johannes Schmid <jhs@gnome.org>

	* plugins/gtodo/interface.c: (gtodo_get_hide_done),
	(gtodo_get_hide_nodate), (gtodo_get_hide_due):
	* plugins/gtodo/main.h:
	* plugins/gtodo/plugin.c: (activate_plugin):
	
	Fixed #423467 (View->Tasks menu items are not 
	checked on startup) (backport from HEAD)

2007-08-14  Naba Kumar  <naba.kumar@gnome.org>

	* plugins/debug-manager/data_buffer.c,
	plugins/message-view/message-view.c: Fixed compiler warnings.
	(backport from HEAD)

2007-08-14  Naba Kumar  <naba.kumar@gnome.org>

	* src/action-callbacks.c: (help_activate),
	(on_help_manual_activate), (on_help_tutorial_activate),
	(on_help_advanced_tutorial_activate), (on_help_faqs_activate):

	Fixed help activation (bug #451557).
	(backport from HEAD)

2007-08-14  Naba Kumar  <naba.kumar@gnome.org>

	* AUTHORS: Added James Liggett. Forgot to add him before :(
	(backport from HEAD)

2007-07-22 Sebastien Granjoux <seb.sfo@free.fr>

	* plugins/debug-manager/breakpoints.c,
	plugins/debug-manager/debugger.c: